# LAB

./: .gitignore  Canny.ipynb  README.md  gitconfigure.bat  lesson1_pets.ipynb
04-C&C++/2-C++/: README.md
04-C&C++/C++/: README.md
04-C&C++/C++Interview/: C++Interview.vcxproj.filters  constructor_explicit.h  (+13 more)
10-Python/: 1.2-GuiFeaturesInOpenCV.py  NumPy.py  Python3列表.py  Python基本语法.ipynb  README.md  ZeroPadding.ipynb
16-PyTorch/: PyTorchFirstNet.py  README.md
ASM/: AddTwo.asm  Project.vcxproj  README.md  sum.asm
C/: .gitignore  C.sln  README.md
C++/: C++.sln
CMake/: README.md
CMake/Demo3.4/: CMakeLists.txt  README.md  clean.sh  main.cc  run.sh
CMake/Demo3.4/inc/: MathFunctions.h
CMake/Demo3.4/src/: CMakeLists.txt
CMake/Demo3.4/src/function/: CMakeLists.txt  build.sh  clean.sh  fun.cc
CMake/Demo3.4/src/function/math/: CMakeLists.txt  MathFunctions.cc
CMake/Demo3.5/: CMakeLists.txt  README.md  clean.sh  main.cc  run.sh
CMake/Demo3.5/inc/: fun.h
CMake/Demo3.5/src/: CMakeLists.txt
CMake/Demo3.5/src/algroithm/: CMakeLists.txt
CMake/Demo3.5/src/function/: CMakeLists.txt  build.sh  fun.cc
CMake/Demo9/: CMakeLists.txt  README.md  build.sh
CMake/Demo9/lib/: CMakeLists.txt  hello.c  hello.h
CMake/Demo9/src/: CMakeLists.txt  main.cc
C_C++/: README.md
DataStructure/: DataStructure.sln  README.md
DeepLearning/: LogisticRegression.py  net.py
GTest/: GTest.sln  README.md
ISP/: Canny.ipynb  GaussianFilter.ipynb  GuidedFilter.py  README.md
JNI/: HelloJNI.c  HelloJNI.java  HelloJNICpp.c  HelloJNICpp.h  HelloJNICpp.java  HelloJNICppImpl.cpp  HelloJNICppImpl.h  README.md  TestJNIPrimitive.c  TestJNIPrimitive.cpp  TestJNIPrimitive.h  TestJNIPrimitive.java
MiniXML/: NOTICE  README.md
MiniXML/lib/: CMakeLists.txt  build.sh  build_android.sh  config.h  mxml-attr.c  mxml.h
NEON/: CMakeLists.txt  NEON.sln  NEON_2_SSE.h  Neon_test.c  Neon_test.h  README.md  arm_neon.h  dilate3x3.c  dilate3x3.h  main.c
NTL/: NBNM.cc  README.md  output.txt  test.sh
OpenCV/: OpenCV.sln
Project64_VS2015/: Project64_VS2015.vcxproj  Project64_VS2015.vcxproj.filters
PyTorch/: PyTorchFirstNet.py  README.md  tensor_tutorial.ipynb
Python/: 1.2-GuiFeaturesInOpenCV.py  1.4.5-MorphologicalTransformations.py  NumPy.ipynb  NumPy.py  Python3列表.py  Python基本语法.ipynb  Python正则表达式.ipynb  README.md  ZeroPadding.ipynb  contours_test.py
Pytorch/: tensor_tutorial.ipynb
StringTest/: StringTest.sln
data/: ReadMe.txt
fast.ai/: lesson1_pets.ipynb  lesson2_download.ipynb
xml/: build.sh  helloworld.cc
xml/Demo2/lib/: CMakeLists.txt  config.h  mxml-node.c
(+436 files in other folders)
